# modo-pato

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  V1-IMPLEMENTATION-PLAN.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
backend/: CLAUDE.md  Dockerfile  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/catalog/: derived.py  enums.py  item_urls.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/catalog/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py  urls_api.py
backend/core/: fields.py  tokens.py
backend/ledgers/: admin.py  apps.py  enums.py  invite_create_urls.py  invite_urls.py  member_urls.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/ledgers/migrations/: 0001_initial.py
backend/tests/: test_auth.py  test_catalog.py  test_health.py  test_ledgers.py
docs/: DEPLOYMENT.md  ROADMAP.md  SPEC.md
frontend/: CLAUDE.md  HIDDEN-CONTRACTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  app.css  main.ts
frontend/src/components/: MonthPicker.vue  ThemeToggle.vue
frontend/src/i18n/: index.ts
frontend/src/lib/: api.ts  validation.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  ledgers.ts  theme.ts
frontend/tests/: App.test.ts  LoginView.test.ts  api.test.ts  auth.store.test.ts  ledgers.store.test.ts  router.test.ts  views.test.ts
(+27 files in other folders)
