[project]
name = "modo-pato-backend"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "psycopg[binary]>=3.1",
    "django-environ>=0.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "tests.py test_*.py *_tests.py"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
branch = true
omit = ["tests/*", "manage.py", "*/migrations/*", "*/wsgi.py"]

[tool.coverage.report]
fail_under = 90
